# fettle

./: ARCHITECTURE-write-protocol.md  Cargo.toml  README.md
.github/workflows/: follow-the-white-rabbit.yml  knock-knock.yml  wake-up.yml
src/: backup.rs  cli.rs  diff.rs  edit_diagnose.rs  filetype.rs  hook.rs  info.rs  install.rs  main.rs  read.rs  stage.rs  write.rs
