[package]
name = "strop"
version = "0.1.0"
edition = "2024"
description = "The final sharpening. Replaces Claude Code's constrained file tools with sharp, unrestricted alternatives."
license = "Apache-2.0"
repository = "https://github.com/coryzibell/strop"
keywords = ["claude-code", "file-tools", "hooks", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
