[package]
name = "fettle"
version = "0.1.6"
edition = "2024"
description = "Put Claude Code's file tools in fine fettle. Removes artificial size limits on reads and the read-before-write gate on writes."
license = "Apache-2.0"
repository = "https://github.com/coryzibell/fettle"
keywords = ["claude-code", "file-tools", "hooks", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
